<resources>
    <string name="app_name">Slagalica</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hint_username">Username or email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button">Log in</string>
    <string name="login_register_link">Don\'t have an account? Register</string>
    <string name="register_title">Register</string>
    <string name="register_hint_username">Username</string>
    <string name="register_hint_email">Email</string>
    <string name="register_button_region">Region</string>
    <string name="register_password_input">Password</string>
    <string name="register_repeat_password_input">Repeat password</string>
    <string name="register_button">Register</string>
    <string name="register_login_link">Already have an account? Log in</string>
    <string name="toolbar_app_name">Slagalica</string>
    <string name="left_drawer_my_profile">My profile</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="product">*</string>
    <string name="divide">/</string>
    <string name="left_paren">(</string>
    <string name="right_paren">)</string>
    <string name="confirm">Confirm</string>
    <string name="left_drawer_home">Početna</string>
    <string name="left_drawer_friends">Prijatelji</string>
    <string name="left_drawer_chat">Čet</string>
    <string name="left_drawer_rank_list">Rank lista</string>
    <string name="left_drawer_tournament">Turnir</string>
    <string name="left_drawer_notifications">Notifikacije</string>
    <string name="left_drawer_leave_match">Izadji iz partije</string>
    <string name="next">Dalje</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_hint_old">Old password</string>
    <string name="reset_password_hint_new">New password</string>
    <string name="reset_password_hint_repeat_new">Repeat new password</string>
    <string name="reset_password_button">Reset Password</string>
    <!-- Profile -->
    <string name="back">Nazad</string>
    <string name="shop">Prodavnica</string>
    <string name="profile_avatar">Profilna slika</string>
    <string name="statistics">Statistika</string>
    <string name="moj_broj_stop">Zaustavi</string>
    <string name="opponent">Protivnik</string>
    <string name="backspace_text">Backspace</string>
    <string name="register_region_hint">Region</string>
    <string name="resetuj_ifru">Resetuj šifru</string>
    <string name="log_out">Log out</string>
    <string name="left_drawer_region_map">Mapa regiona</string>
    <string name="region_map_title">Regioni Srbije</string>
    <string name="region_rank_list_title">Mesečna rang lista</string>
    <string name="region_your_region">Vaš region</string>
    <string name="region_stars_label">zvezda</string>
    <string name="region_players_label">igrača</string>
    <string name="region_test_end_cycle_button">Test: kraj meseca</string>
    <string name="region_test_backfill_stars_button">Test: popuni zvezde</string>
    <!-- Match requests -->
    <string name="match_request_send">Pozovi na partiju</string>
    <string name="match_request_send_short">Pozovi</string>
    <string name="match_request_cancel">Otkaži zahtev</string>
    <string name="match_request_title">Poziv na partiju</string>
    <string name="match_request_accept">Prihvati</string>
    <!-- Friends -->
    <string name="friends_search_hint">Korisničko ime</string>
    <string name="friends_add">Dodaj</string>
    <string name="friends_add_by_qr">Dodaj QR kodom</string>
    <string name="friend_profile_title">Profil prijatelja</string>
    <string name="friend_profile_rank">Mesečni rang</string>
    <string name="friend_profile_stars">Ukupne zvezde</string>
    <string name="friend_profile_league">Liga</string>
</resources>