<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".presentation.fragments.auth.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/screen_padding"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registerTitle"
            style="@style/PageTitle"
            android:text="@string/register_title" />

        <EditText
            android:id="@+id/usernameInput"
            style="@style/AuthInput"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:autofillHints="username"
            android:inputType="text"
            android:hint="@string/register_hint_username" />

        <EditText
            android:id="@+id/emailInput"
            style="@style/AuthInput"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:hint="@string/register_hint_email" />

        <LinearLayout
            style="@style/AuthInput"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@android:drawable/ic_dialog_map" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register_button_region" />

        </LinearLayout>

        <EditText
            android:id="@+id/password1Input"
            android:layout_marginBottom="@dimen/spacing_lg"
            style="@style/AuthInput"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:text="@string/register_password_input" />

        <EditText
            android:id="@+id/password2Input"
            android:layout_marginBottom="@dimen/spacing_lg"
            style="@style/AuthInput"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:text="@string/register_repeat_password_input" />

        <Button
            android:id="@+id/registerButton"
            style="@style/AuthButton"
            android:layout_marginBottom="@dimen/spacing_lg"

            android:text="@string/register_button" />

        <Button
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/register_login_link" />
    </LinearLayout>
</ScrollView>