<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".presentation.fragments.auth.ResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/screen_padding"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resetPasswordTitle"
            style="@style/PageTitle"
            android:text="@string/reset_password_title" />

        <EditText
            android:id="@+id/oldPasswordInput"
            style="@style/AuthInput"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:hint="@string/reset_password_hint_old" />

        <EditText
            android:id="@+id/newPassword1Input"
            style="@style/AuthInput"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:autofillHints="newPassword"
            android:inputType="textPassword"
            android:hint="@string/reset_password_hint_new" />

        <EditText
            android:id="@+id/newPassword2Input"
            style="@style/AuthInput"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:autofillHints="newPassword"
            android:inputType="textPassword"
            android:hint="@string/reset_password_hint_repeat_new" />

        <Button
            android:id="@+id/resetPasswordButton"
            style="@style/AuthButton"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:text="@string/reset_password_button" />

    </LinearLayout>
</ScrollView>