<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".presentation.fragments.auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="100dp"
            tools:src="@tools:sample/avatars" />

        <EditText
            android:id="@+id/identifierInput"
            style="@style/AuthInput"
            android:inputType="text"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:hint="@string/login_hint_username"
            android:autofillHints="username"/>

        <EditText
            android:id="@+id/passwordInput"
            style="@style/AuthInput"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:hint="@string/login_hint_password"
            android:autofillHints="password"/>

        <Button
            android:id="@+id/loginButton"
            style="@style/AuthButton"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/loginRegisterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/login_register_link" />

    </LinearLayout>

</ScrollView>