<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding"
    tools:context=".presentation.fragments.match.MojBrojFragment">

    <TextView
        android:id="@+id/goalNumber"
        style="@style/GameField"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/myNumberLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/myNumber"
        style="@style/GameField"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/goalNumber"
        app:layout_constraintBottom_toBottomOf="@id/goalNumber"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/opponentNumber"
        style="@style/GameField"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/goalNumber"
        app:layout_constraintBottom_toBottomOf="@id/goalNumber"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/myNumberLayout"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/goalNumber"
        app:layout_constraintBottom_toTopOf="@id/opponentLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/myAnswer"
                style="@style/GameField"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:inputType="text"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/backspaceButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_backspace"
                app:iconGravity="textStart" />

        </LinearLayout>

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/opponentLayout"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/myNumberLayout"
        app:layout_constraintBottom_toTopOf="@id/numpad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible">

        <TextView
            android:id="@+id/opponentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Protivnik" />

        <TextView
            android:id="@+id/opponentAnswer"
            style="@style/GameField"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/numpad"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/opponentLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/digit1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="1" />

            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

            <Button
                android:id="@+id/digit2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="2" />

            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

            <Button
                android:id="@+id/digit3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="3" />

            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

            <Button
                android:id="@+id/digit4"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="4" />

        </LinearLayout>

        <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/doubleDigit1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="25" />



            <Button
                android:id="@+id/doubleDigit2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:layout_marginStart="10dp"
                android:text="50" />

        </LinearLayout>

        <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/plus"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:text="@string/plus" />

            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

            <Button
                android:id="@+id/minus"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

            <Button
                android:id="@+id/product"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:text="@string/product" />

            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

            <Button
                android:id="@+id/divide"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:text="@string/divide" />

            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

            <Button
                android:id="@+id/leftParen"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:text="@string/left_paren" />

            <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

            <Button
                android:id="@+id/rightParen"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:text="@string/right_paren" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>